change name and color

--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,7 @@ li a.active {
 }
 .carousel-caption h1 {
     font-size: 157px;
-    color: #fff;
+    color: #00ff99;
     text-transform: uppercase;
     margin-bottom: 0;
 }
